# MeetToText

./: .env  .gitignore  .~lock.transcript.docx#  README.md  main.py  pyproject.toml  requirements.txt  transcript.docx  videoplayback.m4a
